force-app/main/default/objects/Agent_Definition__mdt/Agent_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Agent Definition</label>
    <pluralLabel>Agent Definitions</pluralLabel>
</CustomObject>