force-app/main/default/objects/Agent_Definition__mdt/fields/Externally_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Externally_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this agent may be started and continued through the external REST API (AgentChatApi). Defaults to false so no agent is reachable from outside Salesforce until an admin explicitly opts it in.</description>
    <label>Externally Accessible</label>
    <type>Checkbox</type>
</CustomField>