force-app/main/default/objects/Agent_Definition__mdt/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>natural language description</description>
    <inlineHelpText>natural language description</inlineHelpText>
    <label>Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>