force-app/main/default/objects/Agent_Definition__mdt/fields/LLM_Provider__c.field-meta.xml
<CustomField>
    <fullName>LLM_Provider__c</fullName>
    <description>LLM Provider used by the agent.</description>
    <inlineHelpText>LLM Provider used by the agent.</inlineHelpText>
    <label>LLM Provider</label>
    <referenceTo>LLM_Provider__mdt</referenceTo>
    <relationshipLabel>Agent Definitions</relationshipLabel>
    <relationshipName>Agent_Definitions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>