force-app/main/default/objects/Agent_Definition__mdt/fields/LLMProvider__c.field-meta.xml
<CustomField>
    <fullName>LLMProvider__c</fullName>
    <description>Stores DeveloperName of LLM Provider</description>
    <inlineHelpText>Stores DeveloperName of LLM Provider</inlineHelpText>
    <label>LLM Provider</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>