force-app/main/default/objects/Agent_Definition__mdt/fields/MaxSteps__c.field-meta.xml
<CustomField>
    <fullName>MaxSteps__c</fullName>
    <description>safety limit</description>
    <inlineHelpText>safety limit</inlineHelpText>
    <label>Max Steps</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>