force-app/main/default/objects/Agent_Definition__mdt/fields/Memory_Config__c.field-meta.xml
<CustomField>
    <fullName>Memory_Config__c</fullName>
    <description>Memory Configuration for the agent.</description>
    <inlineHelpText>Memory Configuration for the agent.</inlineHelpText>
    <label>Memory Config</label>
    <referenceTo>Memory_Config__mdt</referenceTo>
    <relationshipLabel>Agent Definitions</relationshipLabel>
    <relationshipName>Agent_Definitions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>