force-app/main/default/objects/Agent_Definition__mdt/fields/MemoryConfig__c.field-meta.xml
<CustomField>
    <fullName>MemoryConfig__c</fullName>
    <description>Stores DeveloperName of Memory Config</description>
    <inlineHelpText>Stores DeveloperName of Memory Config</inlineHelpText>
    <label>Memory Config</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>